aks/shoppingclient.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shoppingclient-deployment
  labels:
    app: shoppingclient
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shoppingclient
  template:
    metadata:
      labels:
        app: shoppingclient
    spec:
      containers:
        - name: shoppingclient
          image: sebaacr.azurecr.io/shoppingclient:v1
          imagePullPolicy: IfNotPresent          
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "0.1"
            limits:
              memory: "128Mi"
              cpu: "0.3"
      imagePullSecrets:
        - name: acr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: shoppingclient-service
spec:
  selector:
    app: shoppingclient
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shoppingclient-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: lb.wypior.com.pl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shoppingclient-service
            port:
              number: 80

# apiVersion: v1
# kind: Service
# metadata:
#   name: shoppingclient-service
# spec:
#   type: LoadBalancer
#   selector:
#     app: shoppingclient
#   ports:
#     - protocol: TCP
#       port: 80
